# pretix-sofort

./: .update-locales  MANIFEST.in  Makefile  README.rst  TODO  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
pretix_sofort/: __init__.py  apps.py  models.py  payment.py  signals.py  sofort.py  urls.py  views.py
pretix_sofort/locale/: django.pot
pretix_sofort/locale/ca/LC_MESSAGES/: django.po
pretix_sofort/locale/cs/LC_MESSAGES/: django.po
pretix_sofort/locale/de/LC_MESSAGES/: django.po
pretix_sofort/locale/de_Informal/LC_MESSAGES/: django.po
pretix_sofort/locale/el/LC_MESSAGES/: django.po
pretix_sofort/locale/fi/LC_MESSAGES/: django.po
pretix_sofort/locale/hr/LC_MESSAGES/: django.po
pretix_sofort/locale/it/LC_MESSAGES/: django.po
pretix_sofort/locale/ja/LC_MESSAGES/: django.po
pretix_sofort/locale/lv/LC_MESSAGES/: django.po
pretix_sofort/locale/nl/LC_MESSAGES/: django.po
pretix_sofort/locale/nl_Informal/LC_MESSAGES/: django.po
pretix_sofort/locale/pl/LC_MESSAGES/: django.po
pretix_sofort/locale/pl_Informal/LC_MESSAGES/: django.po
pretix_sofort/locale/pt/LC_MESSAGES/: django.po
pretix_sofort/locale/ru/LC_MESSAGES/: django.po
pretix_sofort/locale/si/LC_MESSAGES/: django.po
pretix_sofort/locale/sk/LC_MESSAGES/: django.po
pretix_sofort/locale/sl/LC_MESSAGES/: django.po
pretix_sofort/migrations/: 0001_initial.py  0002_referencedsoforttransaction_payment.py
pretix_sofort/templates/pretix_sofort/: action_overpaid.html  action_refund.html  checkout_payment_confirm.html  checkout_payment_form.html  control.html  pending.html
(+4 files in other folders)
