[project]
name = "pretix-sofort"
dynamic = ["version"]
description = "pretix payment via Klarna Sofort"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [
    "lxml",
]

[project.entry-points."pretix.plugin"]
pretix_sofort = "pretix_sofort:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretix/pretix-sofort"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_sofort.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
